@@ -88,4 +88,5 @@ elvi.1sr.gz @mandir@/man1/wetandwild.1sr.gz
 elvi.1sr.gz @mandir@/man1/wikipedia.1sr.gz
 elvi.1sr.gz @mandir@/man1/woffle.1sr.gz
 elvi.1sr.gz @mandir@/man1/yahoo.1sr.gz
+elvi.1sr.gz @mandir@/man1/youtube.1sr.gz
 elvi.1sr.gz @mandir@/man1/yubnub.1sr.gz
