@@ -1,3 +1,7 @@
+2009-11-08  Ian Beckwith  <ianb@erislabs.net>
+
+	* New elvi: youtube. Thanks to Sumant Oemrawsingh.
+
 2009-11-07  Ian Beckwith  <ianb@erislabs.net>
 
 	* New elvi, thanks to Sumant Oemrawsingh:
